Release v1.0.2 - Rewrite entire package to be Java 8+ compatible